Fix overflow issues using CSS

--- a/components/board-games-browser-ui/src/style.css
+++ b/components/board-games-browser-ui/src/style.css
@@ -125,6 +125,7 @@ pre {
   color: white;
   padding: 1em;
   border-radius: 0.5em;
+  overflow-x: auto;
 }
 
 button *, .button * {
